2010-09-29  Satish Sampath  <satish@chromium.org>

        Reviewed by Jeremy Orlow.

        Rename the input element's @speech attribute to @webkitspeech since it is still experimental.
        https://bugs.webkit.org/show_bug.cgi?id=46799

        * bindings/generic/RuntimeEnabledFeatures.h:
        (WebCore::RuntimeEnabledFeatures::webkitspeechEnabled): Rename the runtime feature flag getter.
        * css/CSSPrimitiveValueMappings.h:
        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
        * css/CSSValueKeywords.in: Rename the css style name.
        * css/html.css: Rename the css style name.
        (input::-webkit-input-speech-button):
        * html/HTMLAttributeNames.in: Rename the @speech attribute.
        * html/HTMLInputElement.cpp: Update code using the attribute.
        (WebCore::HTMLInputElement::parseMappedAttribute):
        (WebCore::HTMLInputElement::isSpeechEnabled):
        * html/HTMLInputElement.idl: Rename the @speech attribute.

2010-09-29  MORITA Hajime  <morrita@google.com>

        [Chromium] failed to build without ACCELERATED_COMPOSITING
        https://bugs.webkit.org/show_bug.cgi?id=46793

        Moved constant definitions from inside ACCELERATED_COMPOSITING to
        outside of the condition.
        
        * WebCore.gypi:
        * platform/graphics/chromium/VideoFrameChromium.cpp: Added just for defining constants.
        * platform/graphics/chromium/VideoLayerChromium.cpp:

2010-09-28  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: [Resources panel] Need more visible "at a glance".
        https://bugs.webkit.org/show_bug.cgi?id=45657

        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/front-end/DataGrid.js:
        (WebInspector.DataGrid):
        (WebInspector.DataGrid.prototype.updateWidths):
        (WebInspector.DataGrid.prototype.sortNodes):
        (WebInspector.DataGrid.prototype._resizerDragging):