@@ -66,6 +66,7 @@ void V8CustomVoidCallback::handleEvent()
 bool invokeCallback(v8::Persistent<v8::Object> callback, int argc, v8::Handle<v8::Value> argv[], bool& callbackReturnValue, ScriptExecutionContext* scriptExecutionContext)
 {
     v8::TryCatch exceptionCatcher;
+    exceptionCatcher.SetVerbose(true);
 
     v8::Local<v8::Function> callbackFunction;
     if (callback->IsFunction()) {
@@ -84,14 +85,7 @@ bool invokeCallback(v8::Persistent<v8::Object> callback, int argc, v8::Handle<v8
 
     v8::Handle<v8::Value> result = callbackFunction->Call(thisObject, argc, argv);
     callbackReturnValue = !result.IsEmpty() && result->BooleanValue();
-
-    if (exceptionCatcher.HasCaught()) {
-        v8::Local<v8::Message> message = exceptionCatcher.Message();
-        scriptExecutionContext->reportException(toWebCoreString(message->Get()), message->GetLineNumber(), toWebCoreString(message->GetScriptResourceName()));
-        return true;
-    }
-
-    return false;
+    return exceptionCatcher.HasCaught();
 }
 
 } // namespace WebCore
